# letta

./: .gitignore  compose.yaml
agents/monetization-advisor/: README.md  SETUP_STATUS.md  deploy_agent.py  human.md  persona.md  pipeline.md
letta/server/: startup.sh
services/anthropic-max-proxy/: Dockerfile  README.md  mise.toml  pyproject.toml
services/anthropic-max-proxy/src/anthropic_max_proxy/: __init__.py  config.py  main.py  oauth.py  translator.py
